tests/invalid_options_file/inf_incl_indirect.options_file
MCFLAGS += -V
include inf_incl_indirect.options_file_a
include inf_incl_indirect.options_file_b
